# johnson-and-gonzalez-sahni

./: .gitignore  CMakeLists.txt  README.md  imp1.c  prg1.c  prg1.h.bkup
src/: CMakeLists.txt  imp1.c  imp2.c  imp3.c  imp4.c  main.c  schedule.c
test/: CMakeLists.txt  assert.c  edd.c  erd.c  gonzalez_sahni.c  input_file.c  johnsons.c  lpt.c  ls.c  mcnaughton.c  spt.c  wspt.c
test/inputs/: good.txt  inf_in_end.txt  inf_in_middle.txt  johnsons_all_in_1st_part.txt  johnsons_both_parts.txt  large_number.txt  lect06slide29.txt  lect06slide30.txt  longer_than_buffer.txt  no_ready_times.txt  non_integer.txt
